--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs:
           command: |
             echo $FIREBASE_SERVICE_ACCOUNT > firebase-key.json
             npm install -g firebase-tools
-            firebase deploy -only -hosting:react-todo-circleci --token "$FIREBASE_TOKEN" --project <your-firebase-project-id> --token "$FIREBASE_TOKEN"
+            firebase deploy -only -hosting:react-todo-circleci --token "$FIREBASE_TOKEN" --project fir-intro-4b6a4 --token "$FIREBASE_TOKEN"
             # Replace '<your-firebase-project-id>' with your actual Firebase project ID
 
 workflows:
