--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node@18.16.1
+      - image: cimg/node:18.16.1
 
     working_directory: ~/repo
 
@@ -28,7 +28,7 @@ jobs:
 
   deploy_firebase:
     docker:
-      - image: circleci/node@18.16.1
+      - image: cimg/node:18.16.1
 
     working_directory: ~/repo
 
