--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,8 +57,8 @@ jobs:
       - run:
           name: Firebase Deploy
           command: |
+            npm install -g firebase-tools@12.4.7
             echo $FIREBASE_SERVICE_ACCOUNT > firebase-key.json
-            npm install -g firebase-tools
             firebase deploy -only -hosting:react-todo-circleci --token "$FIREBASE_TOKEN" --project fir-intro-4b6a4 --token "$FIREBASE_TOKEN"
             # Replace '<your-firebase-project-id>' with your actual Firebase project ID
 
