--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,8 +60,7 @@ jobs:
             sudo npm install -g firebase-tools@12.4.7
             echo $FIREBASE_SERVICE_ACCOUNT
             # echo $FIREBASE_SERVICE_ACCOUNT > firebase-key.json
-            # firebase deploy --only hosting:react-todo-circleci --token "$FIREBASE_TOKEN" --project fir-intro-4b6a4 --token "$FIREBASE_TOKEN"
-            # Replace '<your-firebase-project-id>' with your actual Firebase project ID
+            firebase deploy --only hosting:react-todo-circleci --token "$FIREBASE_SERVICE_ACCOUNT" --project fir-intro-4b6a4 --token "$FIREBASE_SERVICE_ACCOUNT"
 
 workflows:
   version: 2
