--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,15 @@
 version: 2.1
-jobs:
-  build:
+jobs:     
+  unit_test:
     docker:
       - image: cimg/node:18.16.1
 
     working_directory: ~/repo
 
     steps:
-      - checkout
-
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package-lock.json" }}
-
       - run:
-          name: Install Dependencies
-          command: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package-lock.json" }}
-
-      - run:
-          name: Build
-          command: npm run build
+          name: Unit Test
+          command: npm run test
 
   deploy_firebase:
     docker:
@@ -64,7 +49,7 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - build
+      - unit_test
       - deploy_firebase:
           requires:
-            - build
+            - unit_test
