--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,31 @@
 version: 2.1
 jobs:     
+  build:
+    docker:
+      - image: cimg/node:18.16.1
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package-lock.json" }}
+
+      - run:
+          name: Install Dependencies
+          command: npm install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package-lock.json" }}
+
+      - run:
+          name: Build
+          command: npm run build
+
   unit_test:
     docker:
       - image: cimg/node:18.16.1
@@ -49,7 +75,10 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - unit_test
+      - build
+      - unit_test:
+          requires:
+            - build
       - deploy_firebase:
           requires:
-            - unit_test
+            - build
