--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,12 @@ jobs:
     working_directory: ~/repo
 
     steps:
+      - checkout
+
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package-lock.json" }}\
+
       - run:
           name: Unit Test
           command: npm run test
@@ -49,7 +55,6 @@ jobs:
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package-lock.json" }}
-            # Add any other cache keys relevant to your project
 
       - run:
           name: Install Dependencies
@@ -59,7 +64,6 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package-lock.json" }}
-            # Add any other cache keys relevant to your project
 
       - run:
           name: Build
@@ -81,4 +85,4 @@ workflows:
             - build
       - deploy_firebase:
           requires:
-            - build
+            - unit_test
