--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,16 @@
 version: 2.1
-jobs:     
-  build:
+executors:
+  node-executor:
     docker:
       - image: cimg/node:18.16.1
-
-    working_directory: ~/repo
-
+jobs:     
+  build:
+    executor: node-executor
     steps:
       - checkout
-
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package-lock.json" }}
-
       - run:
           name: Install Dependencies
           command: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package-lock.json" }}
 
       - run:
           name: Build
@@ -30,27 +20,14 @@ jobs:
           name: Unit Test
           command: npm run test
 
-  deploy_firebase:
-    docker:
-      - image: cimg/node:18.16.1
-
-    working_directory: ~/repo
-
+  deploy:
+    executor: node-executor
     steps:
       - checkout
-
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package-lock.json" }}
 
       - run:
           name: Install Dependencies
           command: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package-lock.json" }}
 
       - run:
           name: Build
@@ -67,6 +44,6 @@ workflows:
   build-deploy:
     jobs:
       - build
-      - deploy_firebase:
+      - deploy:
           requires:
             - build
