--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "update-browserslist": "npx browserslist@latest --update-db"
   },
   "eslintConfig": {
     "extends": [
